# kicad-source-mirror

./: .gitignore  CMakeLists.txt
3d-viewer/: CMakeLists.txt
3d-viewer/3d_cache/: 3d_cache.cpp  3d_plugin_manager.cpp  pcbjam_model_fetch.cpp  pcbjam_model_fetch.h  pcbjam_static_3d_plugins.cpp  pcbjam_static_3d_plugins.h
3d-viewer/3d_cache/sg/: CMakeLists.txt
3d-viewer/3d_canvas/: create_layer_items.cpp  eda_3d_canvas.cpp  eda_3d_canvas.h  eda_3d_canvas_wasm.cpp
3d-viewer/3d_rendering/: image.cpp
3d-viewer/3d_rendering/raytracing/: render_3d_raytrace_base.cpp
3d-viewer/3d_viewer/: eda_3d_viewer_frame.cpp  eda_3d_viewer_frame.h
3d-viewer/common_ogl/: openGL_includes.h
3d-viewer/dialogs/: panel_preview_3d_model.cpp  panel_preview_3d_model.h
api/: CMakeLists.txt
cmake/: FindCURL.cmake  FindCairo.cmake  FindFontconfig.cmake  FindGLEW.cmake  FindGLM.cmake  FindOCC.cmake  FindPixman.cmake  FindSPNAV.cmake  FindZSTD.cmake  Findlibgit2.cmake  Findngspice.cmake  Findnng.cmake  FindwxWidgets.cmake
common/: CMakeLists.txt  build_version.cpp  confirm.cpp  draw_panel_gal.cpp  eda_draw_frame.cpp  eda_shape.cpp  eda_text.cpp  gestfich.cpp  kiway.cpp  netclass.cpp  pgm_base.cpp  single_top.cpp  singleton.cpp
common/dialogs/: dialog_design_block_properties.cpp  dialog_paste_special.cpp  dialog_print_generic.cpp
common/drawing_sheet/: drawing_sheet.keywords  drawing_sheet_parser.cpp  ds_data_model_io.cpp
common/font/: fontconfig.cpp
common/gal/: CMakeLists.txt  gal_display_options.d  graphics_abstraction_layer.d  hidpi_gl_canvas.cpp  hidpi_gl_canvas.d
common/gal/opengl/: opengl_gal.cpp
common/gal/shaders/: convert_glsl_es3.py
common/gal/webgl/: cached_container.cpp  cached_container.d  cached_container_gpu.cpp  cached_container_gpu.d  cached_container_ram.cpp  cached_container_ram.d  fullscreen_quad.cpp  fullscreen_quad.d  gl_context_mgr.cpp  gl_context_mgr.d  gl_resources.cpp  gl_resources.d  gpu_manager.cpp  gpu_manager.d  noncached_container.cpp  noncached_container.d  shader.cpp  shader.d  utils.cpp  utils.d  vertex_container.cpp  vertex_container.d  vertex_item.cpp  vertex_item.d  vertex_manager.cpp  vertex_manager.d  webgl_antialiasing.cpp  webgl_antialiasing.d  webgl_compositor.cpp  webgl_compositor.d  webgl_gal.cpp  webgl_gal.d
common/io/kicad/: kicad_io_utils.cpp
common/kicad_gl/: gl_utils.cpp
common/tool/: action_manager.cpp  action_toolbar.cpp  actions.cpp  tool_manager.cpp
common/view/: wx_view_controls.cpp
common/widgets/: layer_presentation.cpp  lib_tree.cpp  webview_panel.cpp  wx_infobar.cpp  wx_progress_reporters.cpp
eeschema/: CMakeLists.txt  eeschema.cpp  files-io.cpp  picksymbol.cpp  sch_base_frame.cpp  sch_base_frame.h  sch_edit_frame.cpp  sch_preview_panel.cpp  sch_preview_panel.h  symbol_tree_model_adapter.cpp  symbol_tree_synchronizing_adapter.cpp  symbol_tree_synchronizing_adapter.h  toolbars_sch_editor.cpp
eeschema/dialogs/: dialog_sheet_properties.cpp  dialog_sim_command.cpp  dialog_symbol_properties.cpp
eeschema/libraries/: symbol_library_adapter.cpp
eeschema/sch_io/: sch_io_mgr.cpp  sch_io_mgr.h
eeschema/sch_io/pcbjam_lib/: sch_io_pcbjam_lib.cpp  sch_io_pcbjam_lib.h
eeschema/widgets/: panel_remote_symbol.cpp
gerbview/: CMakeLists.txt  events_called_functions.cpp  toolbars_gerber.cpp
gerbview/navlib/: CMakeLists.txt
gerbview/tools/: gerbview_control.cpp
include/: kicad_wasm_diag.h  kiway.h  lib_tree_model_adapter.h  pcb_base_frame.h  pgm_base.h
include/api/: api_utils.h
include/drawing_sheet/: ds_data_item.h
include/font/: fontconfig.h
include/gal/: hidpi_gl_canvas.h
include/gal/opengl/: kiglew.h
include/gal/webgl/: cached_container.h  cached_container_gpu.h  cached_container_ram.h  fullscreen_quad.h  gl_utils.h  gpu_manager.h  kiglew.h  noncached_container.h  shader.h  vertex_common.h  vertex_container.h  vertex_item.h  vertex_manager.h  webgl_antialiasing.h  webgl_compositor.h  webgl_gal.h
include/kicad_gl/: kiglad.h  kiglu.h
include/widgets/: lib_tree.h  webview_panel.h  wx_dataviewctrl.h
libs/core/: profile.cpp
libs/kimath/glu_tess/: glu_tess_impl.d
libs/kimath/src/geometry/: shape_poly_set.cpp
libs/kiplatform/: CMakeLists.txt
pagelayout_editor/: CMakeLists.txt  files.cpp  pl_editor_frame.cpp
pagelayout_editor/navlib/: CMakeLists.txt
pcb_calculator/: CMakeLists.txt
pcbnew/: CMakeLists.txt  board_connected_item.cpp  board_item.cpp  files.cpp  footprint.cpp  footprint_library_adapter.cpp  footprint_library_adapter.h  menubar_pcb_editor.cpp  pad.cpp  padstack.cpp  pcb_base_frame.cpp  pcb_dimension.cpp  pcb_edit_frame.cpp  pcb_field.cpp  pcb_group.cpp  pcb_shape.cpp  pcb_text.cpp  pcb_textbox.cpp  pcb_track.cpp  pcbnew.cpp  pcbnew_jobs_handler.cpp  pcbnew_jobs_handler.h  pcbnew_settings.cpp  toolbars_pcb_editor.cpp  zone.cpp
pcbnew/api/: api_pcb_utils.h
pcbnew/board_stackup_manager/: board_stackup.cpp
pcbnew/dialogs/: dialog_board_reannotate.cpp  panel_setup_layers.cpp
pcbnew/exporters/: exporter_vrml.cpp
pcbnew/navlib/: CMakeLists.txt
pcbnew/pcb_io/: pcb_io_mgr.cpp  pcb_io_mgr.h
pcbnew/pcb_io/pcbjam_fp/: pcb_io_pcbjam_fp.cpp  pcb_io_pcbjam_fp.h
pcbnew/widgets/: appearance_controls.cpp
plugins/3d/oce/: CMakeLists.txt
plugins/3d/vrml/: CMakeLists.txt
plugins/ldr/: pluginldr.cpp  pluginldr.h
scripting/: CMakeLists.txt
